boggersJS/test/unit/components/dialogue/scripts/invalid-syntax/linear-simple-disconnect.dscript
Bob angry M
I am angry right now.

Richard angry M FIGHT
Wait, are we fighting now?

Bob angry M FIGHT
I suppose.
